--- a/public/styl/004header.styl
+++ b/public/styl/004header.styl
@@ -1,1 +1,50 @@
 @import '001func.styl'
+
+.header-to-site
+	position absolute
+	width 100%
+	display table
+	top 60px
+	padding 0 70px
+	z-index 99
+
+.logo-for-site
+	float left
+	margin-top -20px
+
+.brif-for-site
+	float right
+	color #fff
+	font-size 15px
+	opacity .8
+	border-bottom 1px solid rgba(255,255,255, .5)
+	padding 2px 0
+	&:hover
+		color #fff
+		padding 2px 0
+		border-bottom 1px solid transparent
+		text-decoration none
+
+.menu-to-site
+	float right
+	width 43px
+	height 26px
+	position relative
+	margin 1px 0 0 30px
+
+.menu-to-site span
+	position absolute
+	height 2px 
+	width 100%
+	background #fff
+	margin auto
+
+.first-line
+	top 0
+	
+.two-line
+	top 0
+	bottom 0
+
+.third-line
+	bottom 0	
