--- a/views/index.jade
+++ b/views/index.jade
@@ -2,121 +2,144 @@ extends layout
 
 block content
 	body
-		.container-fluid
-			.row
-				.slider-side
-					ul(class="slider-list")
-						li(class="slider-list-item -blue")
-							img(src="/images/slide_one.png", alt="")
-							.slider-description
-								p(class="slider-author") henry wause
-								h2(class="slider-title") Современная классика
-								a(href="" class="button") Подробнее
-						li(class="slider-list-item -ros")
-							img(src="/images/slide_two.png", alt="")
-							.slider-description
-								p(class="slider-author") henry wause
-								h2(class="slider-title") Современная классика
-								a(href="" class="button") Подробнее
-						li(class="slider-list-item -greens")
-							img(src="/images/slide_three.png", alt="")
-							.slider-description
-								p(class="slider-author") henry wause
-								h2(class="slider-title") Современная классика
-								a(href="" class="button") Подробнее
-						li(class="slider-list-item -violets")
-							img(src="/images/slide_four.png", alt="")
-							.slider-description
-								p(class="slider-author") henry wause
-								h2(class="slider-title") Современная классика
-								a(href="" class="button") Подробнее
-					.controls-slider
-		div(class="container")
-			.row
-				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
-					h2(class="name-of-services") Услуги
-					p(class="name-of-mini-description") Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения индивидуально создаются для каждого из наших клиентов
-					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
-						div(class="container-item-serv")
-							span(class="item-serv-icon branding")
-							div(class="item-serv-description")
-								h3 Брендинг
-								p Превратим ваш бренд в один из самых узнаваемых во всем мире
-					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
-						div(class="container-item-serv")
-							span(class="item-serv-icon web-design")
-							div(class="item-serv-description")
-								h3 Веб-дизайн
-								p Преобразовываем ваши идеи в невероятно красивый интерфейс
-					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
-						div(class="container-item-serv")
-							span(class="item-serv-icon illustration")
-							div(class="item-serv-description")
-								h3 Художественная иллюстрация
-								p Реализуем различные бизнес решения и закрытые  системы управления
-					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
-						div(class="container-item-serv")
-							span(class="item-serv-icon web-development")
-							div(class="item-serv-description")
-								h3 Разработка сайтов и SPA
-								p Заставим работать самые  сложные и инимированные композиции дизайна
-					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
-						div(class="container-item-serv")
-							span(class="item-serv-icon bussines")
-							div(class="item-serv-description")
-								h3 Решения для бизнеса
-								p Заставим работать самые  сложные и инимированные композиции дизайна
-		div(class="container-fluid" style="height: 500px; background: #393939")
-			.row
-				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
-		div(class="container -all-to-center")
-			.row
-				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
-					h2(class="name-of-services margin-more") Процес работы
-					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
-						.container-item-precess
-							span(class="item-process-icon brain-storm")
-							h3(class="margin-class") мозговой штурм
-							p Мы используем мозговой штурм как основную методику, с помошью ее мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса 
-					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
-						.container-item-precess
-							span(class="item-process-icon planning")
-							h3(class="margin-class") планирование
-							p Планиование происходит на основе выбранной идеи,создается прототип продукта, продумывается архитектура приложения и баз данных, для создания функционального решения
-					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
-						.container-item-precess
-							span(class="item-process-icon design")
-							h3(class="margin-class") Дизайн
-							p Наши дизайнеры воплощают все идеи в великолепно красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса
-					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
-						.container-item-precess
-							span(class="item-process-icon development")
-							h3(class="margin-class") Разработка
-							p В процесе дизайна, разработчики уже строят архитектуру баз данных, конфигурируют выбранные фреймверки для воплощения идеи, создают абстрактные шаблоны.
-		div(class="container-fluid -light-blue -side-for-logo")
-			.row
-				.container
-					.row
-						div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
-							.container-for-subscribe
-								h2 Подписаться на обновления
-								form(action="" class="form-to-control")
-									input(type="text" class="form-input col-xs-12 col-sm-7 col-md-8 col-lg-8" placeholder="Email адрес")
-									button(class="button col-xs-12 col-sm-5 col-md-4 col-lg-4") Подписаться
-								p(class="text-for-subscribe") Будет использоваться в соответствии с нашей политикой конфиденциальности
-		div(class="container-fluid -dark-grey")
-			.row
-				div(class="footer-container")
-					div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4")
-						p Телефон: +38 (063) 441 83 82
-						p Адрес: Украина, Киев, ул. Архитектора Городецкого, 10/1
-						p E-mail: our@4side.in.ua
-					div(class="col-xs-12 col-sm-2 col-md-4 col-lg-4 -center-align")
-						span(class="mini-logo")
-					div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4 -rigth-align")
-						p © 2015 4Side Web Agency All rights reserved
-						.social-share-button
-							a(href="" class="vk social-link")
-							a(href="" class="fb social-link")
-							a(href="" class="twitter social-link")
+		.container-fixed-menu
+			ul(class="list-menu")
+				li
+					a(href="") Главная
+				li 
+					a(href="") О Компании
+				li 
+					a(href="") Портфолио
+				li 
+					a(href="") Команда
+				li 
+					a(href="") Контакты
+		.container-all-outer
+			header(class="header-to-site")
+				a(href="/" class="logo-for-site")
+					img(src="/images/logo.png", alt="Logo")
+				a(href="#" class="menu-to-site")
+					span(class="first-line")
+					span(class="two-line")
+					span(class="third-line")
+				a(href="#" class="brif-for-site") Оставить заявку
+			.container-fluid
+				.row
+					.slider-side
+						.-absolute-preloader
+							span
+						ul(class="slider-list")
+							li(class="slider-list-item -blue")
+								img(src="/images/slide_one.png", alt="")
+								.slider-description
+									p(class="slider-author") henry wause
+									h2(class="slider-title") Современная классика
+									a(href="" class="button -light-blue-button-slider") Подробнее
+							li(class="slider-list-item -ros")
+								img(src="/images/slide_two.png", alt="")
+								.slider-description
+									p(class="slider-author") henry wause
+									h2(class="slider-title") Деревянная мебель
+									a(href="" class="button -light-rose-button-slider") Подробнее
+							li(class="slider-list-item -greens")
+								img(src="/images/slide_three.png", alt="")
+								.slider-description
+									p(class="slider-author") henry wause
+									h2(class="slider-title") Империя комфортного сна
+									a(href="" class="button -light-green-button-slider") Подробнее
+							li(class="slider-list-item -violets")
+								img(src="/images/slide_four.png", alt="")
+								.slider-description
+									p(class="slider-author") henry wause
+									h2(class="slider-title") Цветочная роскошь
+									a(href="" class="button -light-violet-button-slider") Подробнее
+						.controls-slider
+			div(class="container")
+				.row
+					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
+						h2(class="name-of-services") Услуги
+						p(class="name-of-mini-description") Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения индивидуально создаются для каждого из наших клиентов
+						div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
+							div(class="container-item-serv")
+								span(class="item-serv-icon branding")
+								div(class="item-serv-description")
+									h3 Брендинг
+									p Превратим ваш бренд в один из самых узнаваемых во всем мире
+						div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
+							div(class="container-item-serv")
+								span(class="item-serv-icon web-design")
+								div(class="item-serv-description")
+									h3 Веб-дизайн
+									p Преобразовываем ваши идеи в невероятно красивый интерфейс
+						div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
+							div(class="container-item-serv")
+								span(class="item-serv-icon illustration")
+								div(class="item-serv-description")
+									h3 Художественная иллюстрация
+									p Реализуем различные бизнес решения и закрытые  системы управления
+						div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
+							div(class="container-item-serv")
+								span(class="item-serv-icon web-development")
+								div(class="item-serv-description")
+									h3 Разработка сайтов и SPA
+									p Заставим работать самые  сложные и инимированные композиции дизайна
+						div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
+							div(class="container-item-serv")
+								span(class="item-serv-icon bussines")
+								div(class="item-serv-description")
+									h3 Решения для бизнеса
+									p Заставим работать самые  сложные и инимированные композиции дизайна
+			div(class="container-fluid" style="height: 500px; background: #393939")
+				.row
+					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
+			div(class="container -all-to-center")
+				.row
+					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
+						h2(class="name-of-services margin-more") Процес работы
+						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
+							.container-item-precess
+								span(class="item-process-icon brain-storm")
+								h3(class="margin-class") мозговой штурм
+								p Мы используем мозговой штурм как основную методику, с помошью ее мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса 
+						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
+							.container-item-precess
+								span(class="item-process-icon planning")
+								h3(class="margin-class") планирование
+								p Планиование происходит на основе выбранной идеи,создается прототип продукта, продумывается архитектура приложения и баз данных, для создания функционального решения
+						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
+							.container-item-precess
+								span(class="item-process-icon design")
+								h3(class="margin-class") Дизайн
+								p Наши дизайнеры воплощают все идеи в великолепно красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса
+						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
+							.container-item-precess
+								span(class="item-process-icon development")
+								h3(class="margin-class") Разработка
+								p В процесе дизайна, разработчики уже строят архитектуру баз данных, конфигурируют выбранные фреймверки для воплощения идеи, создают абстрактные шаблоны.
+			div(class="container-fluid -light-blue -side-for-logo")
+				.row
+					.container
+						.row
+							div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
+								.container-for-subscribe
+									h2 Подписаться на обновления
+									form(action="" class="form-to-control")
+										input(type="text" class="form-input col-xs-12 col-sm-7 col-md-8 col-lg-8" placeholder="Email адрес")
+										button(class="button col-xs-12 col-sm-5 col-md-4 col-lg-4") Подписаться
+									p(class="text-for-subscribe") Будет использоваться в соответствии с нашей политикой конфиденциальности
+			div(class="container-fluid -dark-grey")
+				.row
+					div(class="footer-container")
+						div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4")
+							p Телефон: +38 (063) 441 83 82
+							p Адрес: Украина, Киев, ул. Архитектора Городецкого, 10/1
+							p E-mail: our@4side.in.ua
+						div(class="col-xs-12 col-sm-2 col-md-4 col-lg-4 -center-align")
+							span(class="mini-logo")
+						div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4 -rigth-align")
+							p © 2015 4Side Web Agency All rights reserved
+							.social-share-button
+								a(href="" class="vk social-link")
+								a(href="" class="fb social-link")
+								a(href="" class="twitter social-link")
 		script(src="/build/controller.js")
