--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -26,6 +26,55 @@ p {
   color: #393939;
 }
 
+.container-all-outer {
+  position: relative;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transition-timing-function: ease-in-out;
+  -o-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+  left: 0;
+  z-index: 1;
+  -webkit-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.3);
+  background: #fff;
+}
+
+.container-fixed-menu {
+  position: fixed;
+  width: 200px;
+  right: 0;
+  height: 100%;
+  background: #f8f8fa;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.list-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.list-menu li {
+  padding: 23px 0;
+}
+
+.list-menu li a {
+  font-size: 15px;
+  padding: 2px 0;
+  text-transform: uppercase;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  color: #393939;
+}
+
+.list-menu li a:hover {
+  border-bottom: 1px solid rgba(48,121,193,0.38);
+  color: #3079c1;
+}
+
 .-light-blue {
   background-color: #f8f8f9;
 }
@@ -253,9 +302,44 @@ p {
   text-decoration: none;
 }
 
-.-shadow-blue {
-  -webkit-box-shadow: 0px 5px 22px 10px rgba(33,102,172,0.68);
-  box-shadow: 0px 5px 22px 10px rgba(33,102,172,0.68);
+.-light-green-button-slider {
+  background-color: #5cc492;
+  -webkit-box-shadow: 0px 9px 18.9px 2.1px rgba(61,163,114,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+  box-shadow: 0px 9px 18.9px 2.1px rgba(61,163,114,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+}
+
+.-light-green-button-slider:hover {
+  background: transparent;
+}
+
+.-light-rose-button-slider {
+  background-color: #ec5d73;
+  -webkit-box-shadow: 0px 9px 18.9px 2.1px rgba(202,64,86,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+  box-shadow: 0px 9px 18.9px 2.1px rgba(202,64,86,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+}
+
+.-light-rose-button-slider:hover {
+  background: transparent;
+}
+
+.-light-blue-button-slider {
+  background-color: #508dcb;
+  -webkit-box-shadow: 0px 9px 18.9px 2.1px rgba(33,102,172,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+  box-shadow: 0px 9px 18.9px 2.1px rgba(33,102,172,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+}
+
+.-light-blue-button-slider:hover {
+  background: transparent;
+}
+
+.-light-violet-button-slider {
+  background-color: #9f6fc5;
+  -webkit-box-shadow: 0px 9px 18.9px 2.1px rgba(125,75,164,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+  box-shadow: 0px 9px 18.9px 2.1px rgba(125,75,164,0.68), inset 0px 1px 0px 0px rgba(255,255,255,0.21);
+}
+
+.-light-violet-button-slider:hover {
+  background: transparent;
 }
 
 .-blue {
@@ -298,6 +382,168 @@ p {
   border: 1px solid #fff;
 }
 
+.-absolute-preloader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #edeced;
+  z-index: 9;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  opacity: 1;
+}
+
+.hiddens-preloader {
+  -webkit-animation: hidden 1s ease-in;
+  -o-animation: hidden 1s ease-in;
+  animation: hidden 1s ease-in;
+  -webkit-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 0.3s;
+  -o-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+@media screen and (max-width: 1280px) {
+  .slider-list-item img {
+    width: 50%;
+  }
+
+  .slider-side {
+    height: initial;
+  }
+
+  .slider-title {
+    font-size: 57px;
+  }
+
+  .slider-description {
+    margin-top: -65px;
+  }
+}
+
+@-webkit-keyframes hidden {
+  0% {
+    opacity: 1;
+    -webkit-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+  }
+
+  50% {
+    opacity: 0;
+    -webkit-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translate(-9999px, -9999px);
+    transform: translate(-9999px, -9999px);
+  }
+}
+
+@-o-keyframes hidden {
+  0% {
+    opacity: 1;
+    -o-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+  }
+
+  50% {
+    opacity: 0;
+    -o-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+  }
+
+  100% {
+    opacity: 0;
+    -o-transform: translate(-9999px, -9999px);
+    transform: translate(-9999px, -9999px);
+  }
+}
+
+@keyframes hidden {
+  0% {
+    opacity: 1;
+    -webkit-transform: translate(0px, 0px);
+    -o-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+  }
+
+  50% {
+    opacity: 0;
+    -webkit-transform: translate(0px, 0px);
+    -o-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translate(-9999px, -9999px);
+    -o-transform: translate(-9999px, -9999px);
+    transform: translate(-9999px, -9999px);
+  }
+}
+.header-to-site {
+  position: absolute;
+  width: 100%;
+  display: table;
+  top: 60px;
+  padding: 0 70px;
+  z-index: 99;
+}
+
+.logo-for-site {
+  float: left;
+  margin-top: -20px;
+}
+
+.brif-for-site {
+  float: right;
+  color: #fff;
+  font-size: 15px;
+  opacity: 0.8;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
+  padding: 2px 0;
+}
+
+.brif-for-site:hover {
+  color: #fff;
+  padding: 2px 0;
+  border-bottom: 1px solid transparent;
+  text-decoration: none;
+}
+
+.menu-to-site {
+  float: right;
+  width: 43px;
+  height: 26px;
+  position: relative;
+  margin: 1px 0 0 30px;
+}
+
+.menu-to-site span {
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background: #fff;
+  margin: auto;
+}
+
+.first-line {
+  top: 0;
+}
+
+.two-line {
+  top: 0;
+  bottom: 0;
+}
+
+.third-line {
+  bottom: 0;
+}
 .-dark-grey {
   background-color: #393939;
 }
