--- a/public/styl/003slider.styl
+++ b/public/styl/003slider.styl
@@ -54,9 +54,30 @@
 		color #fff
 		text-decoration none
 
-.-shadow-blue
-	box-shadow 0px 5px 22px 10px rgba(33,102,172, .68)
+.-light-green-button-slider
+	background-color rgb(92, 196, 146)
+	box-shadow 0px 9px 18.9px 2.1px rgba(61, 163, 114, 0.68), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.21)
+	&:hover
+		background transparent
 
+.-light-rose-button-slider
+	background-color rgb(236, 93, 115)
+	box-shadow: 0px 9px 18.9px 2.1px rgba(202, 64, 86, 0.68), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.21)
+	&:hover
+		background transparent
+
+.-light-blue-button-slider
+	background-color rgb(80, 141, 203)
+	box-shadow 0px 9px 18.9px 2.1px rgba(33, 102, 172, 0.68), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.21)
+	&:hover
+		background transparent
+
+.-light-violet-button-slider
+	background-color rgb(159, 111, 197)
+	box-shadow 0px 9px 18.9px 2.1px rgba(125, 75, 164, 0.68), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.21)
+	&:hover
+		background transparent
+		
 .-blue
 	background blues
 
@@ -89,3 +110,42 @@
 .controls-slider .-active-slide
 	background-color transparent
 	border 1px solid #fff
+
+.-absolute-preloader
+	position absolute
+	width 100%
+	height 100%
+	background lightgray
+	z-index 9
+	transition 1s
+	opacity 1
+
+.hiddens-preloader
+	animation hidden 1s ease-in
+	animation-fill-mode forwards
+	animation-delay .3s
+
+@keyframes hidden
+	{0%}
+		opacity 1
+		transform translate(0px, 0px)
+	{50%}
+		opacity 0
+		transform translate(0px, 0px)
+	{100%}
+		opacity 0
+		transform translate(-9999px, -9999px)
+		
+
+@media screen and (max-width: 1280px)
+	.slider-list-item img
+		width 50%
+
+	.slider-side
+		height initial
+
+	.slider-title
+		font-size 57px
+
+	.slider-description
+		margin-top -65px
