add delay animation

--- a/public/styl/003slider.styl
+++ b/public/styl/003slider.styl
@@ -124,7 +124,7 @@
 .hiddens-preloader
 	animation hidden 1s ease-in
 	animation-fill-mode forwards
-	animation-delay .3s
+	animation-delay 2s
 
 @keyframes hidden
 	{0%}
