--- a/public/styl/003slider.styl
+++ b/public/styl/003slider.styl
@@ -121,6 +121,16 @@
 	transition 1s
 	opacity 1
 
+.-absolute-preloader img
+	position absolute
+	top 0
+	left 0
+	bottom 0
+	right 0
+	margin auto
+	width 220px
+	height 20px
+
 .hiddens-preloader
 	animation hidden 1s ease-in
 	animation-fill-mode forwards
