--- a/views/index.jade
+++ b/views/index.jade
@@ -28,7 +28,7 @@ block content
 				.row
 					.slider-side
 						.-absolute-preloader
-							span
+							img(src="/images/preload.gif", alt="")
 						ul(class="slider-list")
 							li(class="slider-list-item -blue")
 								img(src="/images/slide_one.png", alt="")
