--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -394,6 +394,17 @@ p {
   opacity: 1;
 }
 
+.-absolute-preloader img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 220px;
+  height: 20px;
+}
+
 .hiddens-preloader {
   -webkit-animation: hidden 1s ease-in;
   -o-animation: hidden 1s ease-in;
