--- a/views/index.jade
+++ b/views/index.jade
@@ -90,9 +90,16 @@ block content
 								div(class="item-serv-description")
 									h3 Решения для бизнеса
 									p Заставим работать самые  сложные и инимированные композиции дизайна
-			div(class="container-fluid" style="height: 500px; background: #393939")
-				.row
-					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
+			.outer-all-block-portfolio
+				div(class="container-of-slider grid")
+					img(src="/images/portfolio/7.jpg", class="grid-item" alt="")
+					img(src="/images/portfolio/8.jpg", class="grid-item" alt="")
+					img(src="/images/portfolio/2.png", class="grid-item" alt="")
+					img(src="/images/portfolio/3.jpg", class="grid-item" alt="")
+					img(src="/images/portfolio/5.jpg", class="grid-item" alt="")
+					img(src="/images/portfolio/1.jpg", class="grid-item" alt="")
+					img(src="/images/portfolio/6.jpg", class="grid-item" alt="")
+					img(src="/images/portfolio/4.jpg", class="grid-item" alt="")
 			div(class="container -all-to-center")
 				.row
 					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
@@ -143,4 +150,6 @@ block content
 								a(href="" class="vk social-link")
 								a(href="" class="fb social-link")
 								a(href="" class="twitter social-link")
+		script(src="/build/masonry.pkgd.min.js")
 		script(src="/build/controller.js")
+		
