--- a/views/index.jade
+++ b/views/index.jade
@@ -92,14 +92,46 @@ block content
 									p Заставим работать самые  сложные и инимированные композиции дизайна
 			.outer-all-block-portfolio
 				div(class="container-of-slider grid")
-					img(src="/images/portfolio/7.jpg", class="grid-item" alt="")
-					img(src="/images/portfolio/8.jpg", class="grid-item" alt="")
-					img(src="/images/portfolio/2.png", class="grid-item" alt="")
-					img(src="/images/portfolio/3.jpg", class="grid-item" alt="")
-					img(src="/images/portfolio/5.jpg", class="grid-item" alt="")
-					img(src="/images/portfolio/1.jpg", class="grid-item" alt="")
-					img(src="/images/portfolio/6.jpg", class="grid-item" alt="")
-					img(src="/images/portfolio/4.jpg", class="grid-item" alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/7.jpg", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/8.jpg", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/2.png", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/3.jpg", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/5.jpg", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/1.jpg", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/6.jpg", alt="")
+					.grid-item
+						.discription-of-work
+							h3 Fusion Agency
+								span World
+						img(src="/images/portfolio/4.jpg", alt="")
 			div(class="container -all-to-center")
 				.row
 					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
