--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -727,41 +727,80 @@ p {
 }
 
 .container-of-slider img {
-  padding: 15px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  width: 100%;
 }
 
-.container-of-slider img:nth-child(1) {
+.discription-of-work {
+  opacity: 0;
+  position: absolute;
+  background-color: rgba(0,0,0,0.9);
+  width: -webkit-calc(100% - 30px);
+  width: calc(100% - 30px);
+  height: -webkit-calc(100% - 30px);
+  height: calc(100% - 30px);
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.discription-of-work:hover {
+  opacity: 1;
+}
+
+.discription-of-work h3 {
+  width: 100%;
+  text-align: center;
+  top: 50%;
+  font-size: 40px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  color: #fff !important;
+  position: absolute;
+}
+
+.discription-of-work h3 span {
+  color: #aaa;
+  display: block;
+  margin-top: 8px;
+  line-height: 14px;
+  font-size: 14px;
+}
+
+.grid-item {
+  padding: 15px;
+}
+
+.container-of-slider .grid-item:nth-child(1) {
   width: 29.2%;
 }
 
-.container-of-slider img:nth-child(2) {
+.container-of-slider .grid-item:nth-child(2) {
   width: 35%;
 }
 
-.container-of-slider img:nth-child(3) {
+.container-of-slider .grid-item:nth-child(3) {
   width: 34.9%;
 }
 
-.container-of-slider img:nth-child(4) {
+.container-of-slider .grid-item:nth-child(4) {
   width: 34.9%;
 }
 
-.container-of-slider img:nth-child(5) {
+.container-of-slider .grid-item:nth-child(5) {
   width: 64.2%;
 }
 
-.container-of-slider img:nth-child(6) {
+.container-of-slider .grid-item:nth-child(6) {
   width: 34.9%;
 }
 
-.container-of-slider img:nth-child(7) {
+.container-of-slider .grid-item:nth-child(7) {
   width: 29.2%;
 }
 
-.container-of-slider img:nth-child(8) {
+.container-of-slider .grid-item:nth-child(8) {
   width: 34.9%;
 }
 
