--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -65,9 +65,9 @@
 	width 34.9%
 
 @media screen and (max-width: 1280px)	
-	.container-of-slider img 
+	.container-of-slider .grid-item
 		width 49.9% i
 		
 @media screen and (max-width: 820px)
-	.container-of-slider img 
+	.container-of-slider .grid-item
 		width 99.9% i
