--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -751,6 +751,7 @@ p {
   width: 100%;
   text-align: center;
   top: 50%;
+  margin: 0;
   font-size: 40px;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -805,13 +806,13 @@ p {
 }
 
 @media screen and (max-width: 1280px) {
-  .container-of-slider img {
+  .container-of-slider .grid-item {
     width: 49.9% !important;
   }
 }
 
 @media screen and (max-width: 820px) {
-  .container-of-slider img {
+  .container-of-slider .grid-item {
     width: 99.9% !important;
   }
 }
