--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -375,6 +375,16 @@ p {
   background-color: #fff;
   border: 1px solid transparent;
   margin: 0 10px;
+  position: relative;
+}
+
+.controls-slider span:before {
+  width: 25px;
+  height: 25px;
+  left: -9px;
+  position: absolute;
+  content: "";
+  top: -10px;
 }
 
 .controls-slider .-active-slide {
