--- a/public/styl/003slider.styl
+++ b/public/styl/003slider.styl
@@ -107,6 +107,14 @@
 	background-color #fff
 	border 1px solid transparent
 	margin 0 10px
+	position relative
+	&:before
+		width 25px
+		height 25px
+		left -9px
+		position absolute
+		content ""
+		top -10px
 
 .controls-slider .-active-slide
 	background-color transparent
