--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -184,6 +184,33 @@ p {
   background-repeat: no-repeat;
 }
 
+.arrow-class {
+  position: relative;
+}
+
+.arrow-class:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  right: 0;
+  height: 5px;
+  background: url("../images/sprite.png") -13px -365px no-repeat;
+  top: 7px;
+  z-index: 1;
+}
+
+.counts-process > div:last-child .arrow-class:before {
+  display: none !important;
+}
+
+.arrow-class span {
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  padding-right: 10px;
+  background: #fff;
+}
+
 /* icon serv */
 
 .branding {
@@ -224,7 +251,33 @@ p {
   background: url("../images/sprite.png") -123px -99px no-repeat;
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 1200px) {
+  .arrow-class:before {
+    background: url("../images/sprite.png") -60px -364px no-repeat;
+    top: 6px;
+    height: 7px;
+  }
+
+  .arrow-class span {
+    padding-right: 0px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .arrow-class span {
+    padding-right: 10px;
+  }
+
+  .arrow-class:before {
+    background: url("../images/sprite.png") 60px -364px no-repeat;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .arrow-class:before {
+    display: none;
+  }
+
   .form-to-control button {
     margin: 20px auto;
     float: none;
