--- a/views/index.jade
+++ b/views/index.jade
@@ -134,27 +134,31 @@ block content
 						img(src="/images/portfolio/4.jpg", alt="")
 			div(class="container -all-to-center")
 				.row
-					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
+					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12 counts-process")
 						h2(class="name-of-services margin-more") Процес работы
 						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 							.container-item-precess
 								span(class="item-process-icon brain-storm")
-								h3(class="margin-class") мозговой штурм
+								h3(class="margin-class arrow-class") 
+									span мозговой штурм
 								p Мы используем мозговой штурм как основную методику, с помошью ее мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса 
 						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 							.container-item-precess
 								span(class="item-process-icon planning")
-								h3(class="margin-class") планирование
+								h3(class="margin-class arrow-class") 
+									span планирование
 								p Планиование происходит на основе выбранной идеи,создается прототип продукта, продумывается архитектура приложения и баз данных, для создания функционального решения
 						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 							.container-item-precess
 								span(class="item-process-icon design")
-								h3(class="margin-class") Дизайн
+								h3(class="margin-class arrow-class") 
+									span Дизайн
 								p Наши дизайнеры воплощают все идеи в великолепно красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса
 						div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 							.container-item-precess
 								span(class="item-process-icon development")
-								h3(class="margin-class") Разработка
+								h3(class="margin-class arrow-class") 
+									span Разработка
 								p В процесе дизайна, разработчики уже строят архитектуру баз данных, конфигурируют выбранные фреймверки для воплощения идеи, создают абстрактные шаблоны.
 			div(class="container-fluid -light-blue -side-for-logo")
 				.row
