--- a/public/css/Manage/manage.css
+++ b/public/css/Manage/manage.css
@@ -381,6 +381,20 @@ a:hover {
     box-shadow: 0px 0px 2px 2px rgba(0,0,0, .1); 
 }
 
+.table-for-portfolio i{
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.table-for-portfolio tr td{
+    vertical-align: middle !important;
+}
+
+
+.table-for-portfolio tr td img{
+    width: 50px;
+}
+
 @media screen and (max-width: 980px) {
     .outer-of-team {
         width: 100%;
