--- a/public/css/Manage/manage.css
+++ b/public/css/Manage/manage.css
@@ -387,7 +387,7 @@ a:hover {
 }
 
 .table-for-portfolio tr td{
-    vertical-align: middle !important;
+    vertical-align: middle !importantF;
 }
 
 
