--- a/views/team.jade
+++ b/views/team.jade
@@ -19,25 +19,11 @@ block content
 						h1(class="title-of-h1") Команда
 						p(class="mini-description") Значимость этих проблем настолько очевидна, что консультация с широким активом представляет собой интересный эксперимент проверки дальнейших направлений развития
 						.outer-of-team
-							.item-team
-								img(src="/images/user.png")
-								h3 Тищенко Владимир
-								h4 CEO & front-end developer
-								p Специалист, которые хорошо знают web программирование клиентской части веб-сайта. Можно сказать, что их задачей является создание привлекательного и удобного веб-дизайна и интерфейса, которые в свою очередь являются показателями качественного программного обеспечения
-							.item-team
-								img(src="/images/user2.png")
-								h3 Великолепная Леди
-								h4 web & graphic designer
-								p Специалист, которые хорошо знают web программирование клиентской части веб-сайта. Можно сказать, что их задачей является создание привлекательного и удобного веб-дизайна и интерфейса, которые в свою очередь являются показателями качественного программного обеспечения
-							.item-team
-								img(src="/images/user1.png")
-								h3 Гринченко Киррил
-								h4 CEO & project manager
-								p Специалист, которые хорошо знают web программирование клиентской части веб-сайта. Можно сказать, что их задачей является создание привлекательного и удобного веб-дизайна и интерфейса, которые в свою очередь являются показателями качественного программного обеспечения
-							.item-team
-								img(src="/images/user3.png")
-								h3 Галайко Александр
-								h4 Back-end developer
-								p Специалист, которые хорошо знают web программирование клиентской части веб-сайта. Можно сказать, что их задачей является создание привлекательного и удобного веб-дизайна и интерфейса, которые в свою очередь являются показателями качественного программного обеспечения
+							each value in data
+								.item-team
+									img(src=value.src)
+									h3= value.name
+									h4= value.profession
+									p= value.description 
 			include footer.jade
 		script(src="/build/controller.js")
