--- a/views/menu.jade
+++ b/views/menu.jade
@@ -5,7 +5,7 @@
 		li 
 			a(href="/about") О Компании
 		li 
-			a(href="") Портфолио
+			a(href="/portfolio") Портфолио
 		li 
 			a(href="/team") Команда
 		li 
