--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -65,6 +65,56 @@
 .container-of-slider .grid-item:nth-child(8)
 	width 34.9%
 
+.title-for-portfolio-single
+	margin 0 auto
+	display table
+
+.rigth-side
+	float right
+	padding 0 30px
+
+.left-side
+	float left
+	padding 0 30px
+	
+.left-side img 
+	max-width 400px
+
+.no-bottom-padding
+	padding-bottom 0 !important
+
+.side-full-description
+	font-size 15px
+	padding 10px 0
+	margin 0
+	font-family 'Playfair Display'
+
+.side-technology, .side-origin
+	text-transform uppercase
+	padding 30px 0 0 0
+	margin 0
+	font-size 15px
+	color greyText
+	letter-spacing 1.5px
+
+.side-technology span, .side-origin span
+	display block 
+	padding 10px 0
+	color weryLightGrey
+	text-transform none
+	letter-spacing 0
+
+.side-work-gallery
+	width 100%
+
+.side-work-gallery > img
+	width 100%
+	margin 50px 0
+
+.side-work-gallery > div 
+	display table 
+	margin 0 auto
+
 @media screen and (max-width: 1280px)	
 	.container-of-slider .grid-item
 		width 49.9% i
