--- a/public/styl/007team.styl
+++ b/public/styl/007team.styl
@@ -51,7 +51,17 @@
 	font-size 14px
 	color weryLightGrey
 	line-height 25px
-	
+
+.outer-image-team
+	width 265px
+	height 265px
+	display inline-block
+	overflow hidden 
+	border-radius 50%
+
+.outer-image-team img 
+	width 100%
+
 @media screen and (max-width: 991px)	
 	.item-team
 		width 70%
