--- a/public/styl/002defaul.styl
+++ b/public/styl/002defaul.styl
@@ -174,6 +174,11 @@ a
 	padding-right 10px
 	background #fff 
 
+.mistake-status
+	font-size 200px
+	padding 50px 0 20px
+	display inline-block
+
 /* icon serv */
 
 .branding
