add opacity menu

--- a/views/err.jade
+++ b/views/err.jade
@@ -11,7 +11,9 @@ block content
 						| Ошибка 
 						br 
 						span(class="mistake-status")= err.status
-					p(class="mini-description") Простите такой страницы нет на нашем сервере или вы не можете на нее попасть из за отсутствия прав, перейдите на главную или воспользуйтесь меню справа.
+					p(class="mini-description") Простите такой страницы нет на нашем сервере или вы не можете на нее попасть из за отсутствия прав, перейдите на 
+						a(href="/") главную страницу
+						|  или воспользуйтесь меню справа.
 
 		include footer.jade
 	script(src="/build/controller.js")
