--- a/views/index.jade
+++ b/views/index.jade
@@ -85,7 +85,7 @@ block content
 						a(class="discription-of-work" href="/portfolio/"+val._id)
 							h3= val.title
 								span= val.description
-						img(src=val.src, alt=val.title)
+						img(src=val.tempTitle, alt=val.title)
 		div(class="container -all-to-center")
 			.row
 				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12 counts-process")
