--- a/views/portfolio_single_project.jade
+++ b/views/portfolio_single_project.jade
@@ -22,7 +22,7 @@ block content
 					.left-side
 						img(src=data.portfolio.src, alt=data.portfolio.title)
 					.rigth-side
-						p(class="side-full-description")= data.portfolio.description + ' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem placeat eligendi, inventore nam beatae culpa minus consectetur quae corrupti. Incidunt natus sit perferendis quisquam fugiat officiis animi modi recusandae facilis.'
+						p(class="side-full-description")= data.portfolio.description
 						h4(class="side-technology") Технологии
 							br
 							span=data.portfolio.technology
