--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -34,36 +34,38 @@
 	color #aaa
 	display block
 	margin-top 8px
-	line-height 14px
+	line-height 17px
 	font-size 14px
+	padding 0 50px
 
 
 .grid-item
 	padding 15px
+	width 33%
 
-.container-of-slider .grid-item:nth-child(1)
-	width 29.2%
+// .container-of-slider .grid-item:nth-child(1)
+// 	width 34.9%
 	
-.container-of-slider .grid-item:nth-child(2)
-	width 35%
+// .container-of-slider .grid-item:nth-child(2)
+// 	width 34.9%
 	
-.container-of-slider .grid-item:nth-child(3)
-	width 34.9%
+// .container-of-slider .grid-item:nth-child(3)
+// 	width 29.2%
 	
 .container-of-slider .grid-item:nth-child(4)
-	width 34.9%
+	width 64%
 	
-.container-of-slider .grid-item:nth-child(5)
-	width 64.2%
+/*.container-of-slider .grid-item:nth-child(5)
+	width 64%
+	*/
+// .container-of-slider .grid-item:nth-child(6)
+// 	width 29.2%
 	
-.container-of-slider .grid-item:nth-child(6)
-	width 34.9%
+// .container-of-slider .grid-item:nth-child(7)
+// 	width 34.9%
 	
-.container-of-slider .grid-item:nth-child(7)
-	width 29.2%
-	
-.container-of-slider .grid-item:nth-child(8)
-	width 34.9%
+// .container-of-slider .grid-item:nth-child(8)
+// 	width 29.2%
 
 .title-for-portfolio-single
 	margin 0 auto
