--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -25,7 +25,7 @@ block content
 							a(class="discription-of-work" href="/portfolio/"+value._id)
 								h3=value.title
 									span=value.description
-							img(src=value.src, alt="")
+							img(src=value.tempTitle, alt="")
 			
 		include footer.jade
 	script(src="/build/masonry.pkgd.min.js")
