--- a/views/index.jade
+++ b/views/index.jade
@@ -23,25 +23,25 @@ block content
 							.slider-description
 								p(class="slider-author") henry wause
 								h2(class="slider-title") Современная классика
-								a(href="" class="button -light-blue-button-slider") Подробнее
+								a(href="/portfolio/56eef402b253494b0d0e6201" class="button -light-blue-button-slider") Подробнее
 						li(class="slider-list-item -ros")
 							img(src="/images/slide_two.png", alt="")
 							.slider-description
 								p(class="slider-author") henry wause
 								h2(class="slider-title") Деревянная мебель
-								a(href="" class="button -light-rose-button-slider") Подробнее
+								a(href="/portfolio/56eef184b253494b0d0e61fb" class="button -light-rose-button-slider") Подробнее
 						li(class="slider-list-item -greens")
 							img(src="/images/slide_three.png", alt="")
 							.slider-description
 								p(class="slider-author") henry wause
 								h2(class="slider-title") Империя комфорта
-								a(href="" class="button -light-green-button-slider") Подробнее
+								a(href="/portfolio/56eef27fb253494b0d0e61fd" class="button -light-green-button-slider") Подробнее
 						li(class="slider-list-item -violets")
 							img(src="/images/slide_four.png", alt="")
 							.slider-description
 								p(class="slider-author") henry wause
 								h2(class="slider-title") Цветочная роскошь
-								a(href="" class="button -light-violet-button-slider") Подробнее
+								a(href="/portfolio/56eef34eb253494b0d0e61ff" class="button -light-violet-button-slider") Подробнее
 					.controls-slider
 		div(class="container")
 			.row
