--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -43,33 +43,13 @@
 	padding 15px
 	width 33%
 
-// .container-of-slider .grid-item:nth-child(1)
-// 	width 34.9%
-	
-// .container-of-slider .grid-item:nth-child(2)
-// 	width 34.9%
-	
-// .container-of-slider .grid-item:nth-child(3)
-// 	width 29.2%
-	
 .container-of-slider .grid-item:nth-child(4)
-	width 64%
-	
-/*.container-of-slider .grid-item:nth-child(5)
-	width 64%
-	*/
-// .container-of-slider .grid-item:nth-child(6)
-// 	width 29.2%
-	
-// .container-of-slider .grid-item:nth-child(7)
-// 	width 34.9%
-	
-// .container-of-slider .grid-item:nth-child(8)
-// 	width 29.2%
+	width 66%
 
 .title-for-portfolio-single
 	margin 0 auto
-	display table
+	display flex
+	justify-content center
 
 .rigth-side
 	padding 0 30px
