--- a/public/styl/002defaul.styl
+++ b/public/styl/002defaul.styl
@@ -239,4 +239,10 @@ a
 
 	.-all-to-center
 		text-align center
+		
+@media screen and (max-width: 400px)
+	.item-serv-description h3, .container-item-precess h3
+		word-wrap break-word
+		font-size 14px
+
 
