--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -310,6 +310,14 @@ a {
     text-align: center;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .item-serv-description h3,
+  .container-item-precess h3 {
+    word-wrap: break-word;
+    font-size: 14px;
+  }
+}
 .slider-side {
   width: 100%;
   height: 790px;
