--- a/views/about.jade
+++ b/views/about.jade
@@ -16,7 +16,7 @@ block content
 								else
 									li= val.inRus
 					h1(class="title-of-h1") О Компании
-					p(class="mini-description") Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения индивидуально создаются для каждого из наших клиентов
+					p(class="mini-description") Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения, индивидуально создаются для каждого из наших клиентов
 			- var classie = '';
 			- for (var i = 0; i < data.length; i += 2)
 				- if (i == 2) {classie = 'reverse'}
