--- a/views/index.jade
+++ b/views/index.jade
@@ -47,7 +47,7 @@ block content
 			.row
 				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
 					h2(class="name-of-services") Услуги
-					p(class="name-of-mini-description") Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения индивидуально создаются для каждого из наших клиентов
+					p(class="name-of-mini-description") Мы понимаем, ваша история и желания уникальны. Именно поэтому наши микро-команды и решения, индивидуально создаются для каждого из наших клиентов
 					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
 						div(class="container-item-serv")
 							span(class="item-serv-icon branding")
@@ -91,31 +91,31 @@ block content
 		div(class="container -all-to-center")
 			.row
 				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12 counts-process")
-					h2(class="name-of-services margin-more") Процес работы
+					h2(class="name-of-services margin-more") Процесc работы
 					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 						.container-item-precess
 							span(class="item-process-icon brain-storm")
 							h3(class="margin-class arrow-class") 
 								span мозговой штурм
-							p Мы используем мозговой штурм как основную методику, с помошью ее мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса 
+							p Мы используем мозговой штурм как основную методику, с помощью которой мы получаем всегда свежие, абсолютно смелые, индивидуальные и креативные идеи для вашего бизнеса 
 					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 						.container-item-precess
 							span(class="item-process-icon planning")
 							h3(class="margin-class arrow-class") 
 								span планирование
-							p Планиование происходит на основе выбранной идеи,создается прототип продукта, продумывается архитектура приложения и баз данных, для создания функционального решения
+							p Планирование происходит на основе выбранной идеи,создается прототип продукта, продумывается архитектура приложения и баз данных, для создания функционального решения
 					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 						.container-item-precess
 							span(class="item-process-icon design")
 							h3(class="margin-class arrow-class") 
 								span Дизайн
-							p Наши дизайнеры воплощают все идеи в великолепно красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса
+							p Наши дизайнеры воплощают все идеи в великолепно-красивый интерфейс, непревзойденный бренд или удобную и в тоже время современную СRM систему для бизнеса
 					div(class="col-xs-12 col-sm-6 col-md-3 col-lg-3")
 						.container-item-precess
 							span(class="item-process-icon development")
 							h3(class="margin-class arrow-class") 
 								span Разработка
-							p В процесе дизайна, разработчики уже строят архитектуру баз данных, конфигурируют выбранные фреймверки для воплощения идеи, создают абстрактные шаблоны.
+							p В процессе дизайна, разработчики уже строят архитектуру баз данных, конфигурируют выбранные фреймверки для воплощения идеи, создают абстрактные шаблоны.
 		include footer.jade
 	script(src="/build/masonry.pkgd.min.js")
 	script(src="/build/controller.js")
