--- a/views/index.jade
+++ b/views/index.jade
@@ -71,13 +71,13 @@ block content
 							span(class="item-serv-icon web-development")
 							div(class="item-serv-description")
 								h3 Разработка сайтов и SPA
-								p Заставим работать самые  сложные и инимированные композиции дизайна
+								p Заставим работать самые сложные и анимированные композиции дизайна
 					div(class="col-xs-12 col-sm-6 col-md-6 col-lg-6")
 						div(class="container-item-serv")
 							span(class="item-serv-icon bussines")
 							div(class="item-serv-description")
 								h3 Решения для бизнеса
-								p Заставим работать самые  сложные и инимированные композиции дизайна
+								p Построение систем учета и управления исходя из индивидуальных потребностей
 		.outer-all-block-portfolio
 			div(class="container-of-slider grid")
 				- var i = 0;
