--- a/views/footer.jade
+++ b/views/footer.jade
@@ -21,6 +21,6 @@ div(class="container-fluid -dark-grey")
 			div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4 -rigth-align")
 				p © 2016 4Side Web Agency All rights reserved
 				.social-share-button
-					a(href="https://vk.com/club117822711" target="_blank" class="vk social-link")
+					a(href="https://vk.com/4sideWebAgency" target="_blank" class="vk social-link")
 					a(href="https://www.facebook.com/profile.php?id=100010120746678" target="_blank" class="fb social-link")
-					a(href="" class="twitter social-link")
+					a(href="https://twitter.com/4sideAgency" class="twitter social-link")
