--- a/views/team.jade
+++ b/views/team.jade
@@ -16,7 +16,7 @@ block content
 								else
 									li= val.inRus
 					h1(class="title-of-h1") Команда
-					p(class="mini-description") Значимость этих проблем настолько очевидна, что консультация с широким активом представляет собой интересный эксперимент проверки дальнейших направлений развития
+					p(class="mini-description") Консультация с широким активом нашей команды, представляет собой интересный эксперимент направленый на реализацию ваших идей.
 					.outer-of-team
 						each value in data
 							.item-team
