--- a/public/styl/011modal.styl
+++ b/public/styl/011modal.styl
@@ -23,8 +23,11 @@
 	text-align center
 	margin 0 auto
 	background #fff
-	padding 40px 0 100px
+	padding 40px 0 60px
 	box-shadow 0px 0px 55px 4px rgb(230, 230, 230)
+
+.hide-message
+	padding-top 20px
 
 .side-modal-title
 	font-family 'Playfair Display'
