--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -1256,9 +1256,13 @@ a {
   text-align: center;
   margin: 0 auto;
   background: #fff;
-  padding: 40px 0 100px;
+  padding: 40px 0 60px;
   -webkit-box-shadow: 0px 0px 55px 4px #e6e6e6;
   box-shadow: 0px 0px 55px 4px #e6e6e6;
+}
+
+.hide-message {
+  padding-top: 20px;
 }
 
 .side-modal-title {
