--- a/views/footer.jade
+++ b/views/footer.jade
@@ -21,5 +21,5 @@ div(class="container-fluid -dark-grey")
 				p © 2016 4Side Web Agency All rights reserved
 				.social-share-button
 					a(href="https://vk.com/4sideWebAgency" target="_blank" class="vk social-link")
-					a(href="https://www.facebook.com/profile.php?id=100010120746678" target="_blank" class="fb social-link")
+					a(href="https://www.facebook.com/groups/1586755234985038/" target="_blank" class="fb social-link")
 					a(href="https://twitter.com/4sideAgency" class="twitter social-link")
