--- a/public/css/Manage/manage.css
+++ b/public/css/Manage/manage.css
@@ -23,6 +23,7 @@ a:hover {
 
 label {
     font-weight: normal;
+    margin: 0;
 }
 
 .table>thead>tr>th{
@@ -139,19 +140,26 @@ label {
     margin-top: 40px;
 }
 .block-for-slides-campany {
-    display: table;
     width: 100%;
-    position: relative;
+    position: fixed;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+    left: 0;
+    top: 0;
+    z-index: 999999;
+    display: flex;
+    align-items: center;        
+    justify-content: center;
 }
 .area-for-content {
-    display: table-cell;
     background-color: #fff;
-    width: 45%;
-    vertical-align: middle;
-    text-align: center;
-    margin: 1%;
+    width: 50%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .area-for-content img {
     width: 100%;
 }
@@ -165,6 +173,9 @@ label {
 }
 .outer-all-about-block {
     margin: 40px 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .area-for-content .btn {
     display: block;
@@ -193,13 +204,31 @@ label {
 }
 .to-text-form {
     padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    background: #fff;
+    position: relative;
 }
+
+.to-text-form-inner{
+   display: flex;
+    flex-wrap: wrap;
+    background: #fff;
+    position: relative; 
+    width: 100%;
+}
+
+.to-text-form-inner > * {
+    width: 100%;
+}
+
 .outer-members {
     margin: 40px auto;
     max-width: 1100px;
-    display: table;
+    display: flex;
     width: 100%;
     position: relative;
+    justify-content: space-between;
 }
 .outer-of-team {
     width: 47%;
@@ -420,11 +449,10 @@ label {
 }
 .button {
     background: #508dcb;
-    border-radius: 30px;
     border: none;
     padding: 16px;
     width: 247px;
-    font-size: 18px;
+    font-size: 14px;
     display: inline-block;
     color: #fff;
 }
@@ -432,6 +460,32 @@ label {
     padding: 10px 16px;
     width: initial !important;
 }
+.for-button-absolute{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: initial;
+}
+
+.button-save{
+    width: 20px;
+    height: 20px;
+    background: url(../../../images/save.png);
+    background-size: 100%;
+    border: none;
+    margin: 0 5px;
+    display: inline-block;
+}
+.button-close{
+    width: 20px;
+    height: 20px;
+    background: url(../../../images/close.png);
+    background-size: 100%;
+    border: none;
+    margin: 0 5px;
+    display: inline-block;
+}
+
 .form-input {
     border: 3px solid #edeced;
     border-radius: 3px;
